--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
       "build:frontend": "cd Frontend && npm install && npm run build",
       "build:backend": "cd Backend && npm install",
       "build": "npm run build:frontend && npm run build:backend",
+      "start:local": "node Backend/server.js",
       "start": "netlify dev"
     }
-  }  
+  }
+  
