--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
       "build:frontend": "cd Frontend && npm install && npm run build",
       "build:backend": "cd Backend && npm install",
       "build": "npm run build:frontend && npm run build:backend",
-      "start:local": "node Backend/server.js",
+      "start:local": "node Backend/server.js", 
       "start": "netlify dev"
+    },
+    "dependencies": {
+      "serverless-http": "^2.7.0" 
     }
   }
-  
