--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
       "start": "netlify dev"
     },
     "dependencies": {
-      "serverless-http": "^2.7.0" 
+        "@google/generative-ai": "^0.21.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2"
     }
   }
